# MediaCenter2

./: build.gradle  gradle.properties  settings.gradle
ffmpegengine/: CMakeLists.txt  build.gradle
ffmpegengine/src/main/: AndroidManifest.xml
ffmpegengine/src/main/cpp/: FFmpegEngine.cpp  FFmpegEngine.h
ffmpegengine/src/main/res/values/: strings.xml
mobile/: build.gradle
mobile/src/main/: AndroidManifest.xml
mobile/src/main/res/drawable/: bg_rounded.xml  ic_about.xml  ic_add_playlist.xml  ic_audio.xml  ic_back_button.xml  ic_checked.xml  ic_close.xml  ic_edit.xml  ic_effects.xml  ic_file.xml  ic_files.xml  ic_folder.xml  ic_launch_splash.xml  ic_loop.xml  ic_menu.xml  ic_no_folder.xml  ic_no_track.xml  ic_pause.xml  ic_play.xml  ic_playlist.xml  ic_scan.xml  ic_search.xml  ic_seek.xml  ic_settings.xml  ic_timer.xml  ic_trash.xml  ic_video.xml  ic_volume.xml  ic_wear.xml  nav_item_background.xml  raised_button_background.xml  seek_bar_progress.xml  seek_bar_thumb.xml  splash_background.xml  vd_music_next.xml  vd_music_previous.xml
superpoweredengine/: CMakeLists.txt  build.gradle
superpoweredengine/src/main/: AndroidManifest.xml
superpoweredengine/src/main/cpp/: SuperpoweredEngine.cpp  SuperpoweredEngine.h
superpoweredengine/src/main/cpp/superpowered/AndroidIO/: SuperpoweredAndroidAudioIO.cpp  SuperpoweredAndroidAudioIO.h  SuperpoweredUSBAudio.h
superpoweredengine/src/main/java/com/fesskiev/engine/: SuperpoweredEngine.kt
superpoweredengine/src/main/res/values/: strings.xml
wear/: build.gradle
wear/src/main/: AndroidManifest.xml
(+245 files in other folders)
